refactor: revert naming of HttpError
