# internal/user/user_controller.go
@@ -24,7 +24,7 @@ func NewUserController(db *gorm.DB) UserController {
 // @Summary Retrieves users
 // @Tags users
 // @Success 200	{array} User
-// @Failure 500 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.HttpError
 // @Router /admin/users [get]
 func (u *UserController) FindAll(c *gin.Context) {
 	users := u.UserService.FindAll()
@@ -36,9 +36,9 @@ func (u *UserController) FindAll(c *gin.Context) {
 // @Tags users
 // @Param id path integer true "User ID"
 // @Success 200	{object} User
-// @Failure 400 {object} utils.ErrorResponse
-// @Failure 404 {object} utils.ErrorResponse
-// @Failure 500 {object} utils.ErrorResponse
+// @Failure 400 {object} utils.HttpError
+// @Failure 404 {object} utils.HttpError
+// @Failure 500 {object} utils.HttpError
 // @Router /admin/users/{id} [get]
 func (u *UserController) FindById(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
@@ -60,8 +60,8 @@ func (u *UserController) FindById(c *gin.Context) {
 // @Tags users
 // @Param request body CreateUserDto true "CreateUserDto"
 // @Success 201	{array} User
-// @Failure 400 {object} utils.ErrorResponse
-// @Failure 500 {object} utils.ErrorResponse
+// @Failure 400 {object} utils.HttpError
+// @Failure 500 {object} utils.HttpError
 // @Router /admin/users [post]
 func (u *UserController) Create(c *gin.Context) {
 	var dto CreateUserDto
@@ -83,9 +83,9 @@ func (u *UserController) Create(c *gin.Context) {
 // @Param id path integer true "User ID"
 // @Param request body CreateUserDto true "UpdateUserDto"
 // @Success 200	{array} User
-// @Failure 400 {object} utils.ErrorResponse
-// @Failure 404 {object} utils.ErrorResponse
-// @Failure 500 {object} utils.ErrorResponse
+// @Failure 400 {object} utils.HttpError
+// @Failure 404 {object} utils.HttpError
+// @Failure 500 {object} utils.HttpError
 // @Router /admin/users/{id} [patch]
 func (u *UserController) Update(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
@@ -115,8 +115,8 @@ func (u *UserController) Update(c *gin.Context) {
 // @Tags users
 // @Param id path integer true "User ID"
 // @Success 200
-// @Failure 400 {object} utils.ErrorResponse
-// @Failure 404 {object} utils.ErrorResponse
+// @Failure 400 {object} utils.HttpError
+// @Failure 404 {object} utils.HttpError
 // @Router /admin/users/{id} [delete]
 func (u *UserController) Delete(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
